--- a/backend.net/RegenAoc.Tests/RegenAoc.Tests.csproj
+++ b/backend.net/RegenAoc.Tests/RegenAoc.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -17,6 +17,15 @@
 
   <ItemGroup>
     <ProjectReference Include="..\aoc-scores\RegenAoc.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="boardconfig.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="sampleaoc.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
