--- a/backend.net/aoc-scores/RegenAoc.csproj
+++ b/backend.net/aoc-scores/RegenAoc.csproj
@@ -14,7 +14,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="listconfig.json">
+    <None Update="boardconfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
