--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11"
+    "lodash": "^4.17.21",
+    "vue": "^2.6.11",
+    "vuetify": "^2.5.14"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.176",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
