--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "core-js": "^3.6.5",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
-    "vuetify": "^2.5.14"
+    "vuetify": "^2.5.14",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.176",
