--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "json-stringify-pretty-compact": "^3.0.0",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
     "vuetify": "^2.5.14",
