--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "json-stringify-pretty-compact": "^3.0.0",
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
+    "vue-google-charts": "^0.3.3",
     "vuetify": "^2.5.14",
     "vuex": "^3.6.2"
   },
