Added support for parsing global score and private leaderboard html for profile, supporter-indicator and avatar image

--- a/backend.net/RegenAoc.Tests/RegenAoc.Tests.csproj
+++ b/backend.net/RegenAoc.Tests/RegenAoc.Tests.csproj
@@ -20,6 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="20.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="boardconfig.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
