--- a/backend.net/aoc-scores/RegenAoc.csproj
+++ b/backend.net/aoc-scores/RegenAoc.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Amazon.Lambda.SQSEvents" Version="2.0.0" />
     <PackageReference Include="AWSSDK.DynamoDBv2" Version="3.7.0.98" />
     <PackageReference Include="AWSSDK.S3" Version="3.7.4.4" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.11.38" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
   <ItemGroup>
