--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "lodash": "^4.17.21",
     "vue": "^2.6.11",
     "vue-google-charts": "^0.3.3",
+    "vue-gtag": "^1.16.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.5.14",
     "vuex": "^3.6.2"
