--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "vue/valid-v-slot": "off"
+    }
   },
   "browserslist": [
     "> 1%",
