Created batchfile to build, deploy + invalidate CDN.
Closes #32.

I was aiming for a makefile, as that has some additional benefits.
However, my git bash environment didn't have access to npm etc etc
so I opted for a simple batchfile.

Note that you'll need a deployenv.bat file with the following info:

set CLOUDFRONT_ID=<ID>
if "%AWS_PROFILE%" == "" set AWS_PROFILE=<profile>

The second line is optional.

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Internally generated files
 backend/.layers.out/
 envvars.py
+deployenv.bat
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
