Using web sockets to send board refreshed messages.
This solves #82.

* Implemented backend for websockets
* Added Sockets class in frontend
* Implemented socket channel and client/subscription handling in backend
* Cleaned up loading protocol, store parameters.
* socket_handler handles client communication in backend.
* notifier subscribes to S3-changes and sends notifications to
  registered clients.

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 backend/.layers.out/
 envvars.py
 deployenv.bat
+node_modules/
+temp/
+^/package.json
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
